# halo

./: .gitignore  .replit  ARCIUM_REFLECT_INTEGRATION.md  AUTOMATION_INTEGRATION.md  Anchor.toml  BUILD_SUCCESS_SUMMARY.md  CODEBASE_AUDIT.md  CONTRIBUTING_DEMO.md  Cargo.toml  DEMO_ARCHITECTURE.md  DEMO_FILES_MANIFEST.md  DEMO_README.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOYMENT_STATUS.md  DEVELOPER_GUIDE.md  DEVELOPER_ONBOARDING.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_READY.md  GOVERNANCE_AUCTION_MODULE.md  HANDOFF_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_TO_PRODUCTION_SDKS.md  MOBILE_APP_IMPLEMENTATION.md  NEXT_STEPS_IMPLEMENTATION.md  ON_CHAIN_IDL_SUCCESS.md  PROGRAM_ID_UPDATE.md  PR_DESCRIPTION.md  QUICKSTART_DEMO.md  README.md  REAL_DATA_MIGRATION_STATUS.md  REVENUE_MODULE.md  SOLEND_INTEGRATION.md  STAKING_SYSTEM_IMPLEMENTATION.md  TRUST_SCORING.md  docker-compose.yml  get-wallet-info.js  package-lock.json  (+9 more)
app/: arcium-example.ts  arcium-service.ts  automation-example.ts  demo-5-member-circle.ts  deploy.ts  example.ts  halo-client.ts  production-automation-example.ts  reflect-example.ts  reflect-service.ts  revenue-example.ts  run-full-demo.ts  simple-trust-score-demo.ts  simulate-contributions.ts  simulate-governance.ts  simulate-payouts.ts  solend-example.ts  solend-service.ts  solend-simple-example.ts  trust-score-api-demo.ts  trust-score-dashboard-service.ts  trust-scoring-demo.ts
attached_assets/: Pasted-Halo-Protocol-Production-Readiness-Plan-Devnet-Confirme_1767947738750.txt
context/: HALO_SOLANA_MVP_PRD.md  (+3 more)
programs/halo-protocol/: Cargo.toml
programs/halo-protocol/src/: errors.rs  instructions.rs  insurance.rs  lib.rs  revenue.rs  state.rs  yield_integration.rs
(+227 files in other folders)
