[package]
name = "halo-protocol"
version = "0.1.0"
description = "Solana Anchor smart contract for ROSCA circles"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "halo_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
blake3 = "=1.5.0"
