[package]
name = "halo-protocol"
version = "0.1.0"
description = "Solana Anchor smart contract for ROSCA circles"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "halo_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

# Pin to versions compatible with SBF platform-tools rustc/cargo
# constant_time_eq >=0.4.0 requires edition2024 (cargo 1.85+)
# blake3 >=1.6.0 pulls in constant_time_eq 0.4.x
blake3 = "=1.5.5"
constant_time_eq = "=0.3.1"
